[tool.poetry]
name = "ai-orbit-intel-3d"
version = "0.1.0"
description = "Real-time 3D Satellite Visualization & AI Orbital Anomaly Detection"
authors = ["Thierry Maesen <thierry.maesen@proton.me>"]
license = "MIT"
readme = "README.md"
packages = [{include = "orbit_intel", from = "src"}]

[tool.poetry.urls]
homepage = "https://github.com/thierrymaesen"
repository = "https://github.com/thierrymaesen/ai-orbit-intel-3d"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
skyfield = "^1.45"
scikit-learn = "^1.3.0"
pandas = "^2.0.0"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
jinja2 = "^3.1.2"
pydantic = "^2.5.0"
requests = "^2.31.0"
schedule = "^1.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
ruff = "^0.1.0"
black = "^24.0.0"
mypy = "^1.8.0"

[tool.poetry.scripts]
serve = "uvicorn:main"

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
target-version = ["py310"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
